--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   
    <ul>
     <li> <img src="./triangle.jpg" alt=""></li>
-    <li><input type="search"></li>
+    <li><input type="search" placeholder="Search for Hotel" aria-label="Search"></li>
     <svg width="100" height="100">
         <circle cx="30" cy="30" r="10" stroke="green" stroke-width="4" fill="white" />
      </svg>
